--- a/config/config.toml
+++ b/config/config.toml
@@ -1,4 +1,10 @@
 [ConnectorApi]
+    # ApiType signals the type of api and what is being launched. This flag overrides some of the other settings.
+    # e.g in the |client-api| mode password and username are not needed
+    # Options: | observer-api | client-api | notifier
+    # Defaults to: notifier
+    ApiType = "notifier"
+
     # The port on which the Hub listens for subscriptions
     Port = "5000"
 
