add flag for duplicates check

--- a/config/config.toml
+++ b/config/config.toml
@@ -18,6 +18,11 @@
     # Password is the password needed to authorize an observer to push event data
     Password = ""
 
+    # CheckDuplicates signals if the events received from observers have been already pushed to clients
+    # Requires a redis instance/cluster and should be used when multiple observers push from the same shard
+    # Defaults to: false
+    CheckDuplicates = false
+
 [PubSub]
     # The url used to connect to a pubsub server
     # Note: not required for running in the notifier mode
