--- a/config/config.toml
+++ b/config/config.toml
@@ -33,6 +33,10 @@
     Channel = "pub-sub"
 
 [RabbitMQ]
+    # The url used to connect to a rabbitMQ server
+    # Note: not required for running in the notifier mode
     Url = "amqp://guest:guest@localhost:5672"
 
+    # The exchange name which holds all events
+    # Expected type: fanout
     EventsExchange = "all_events"
