reopen channel. publish revert event

--- a/config/config.toml
+++ b/config/config.toml
@@ -40,3 +40,7 @@
     # The exchange name which holds all events
     # Expected type: fanout
     EventsExchange = "all_events"
+
+    # The exchange name which holds revert events
+    # Expected type: fanout
+    RevertEventsExchange = "revert_events"
