--- a/cmd/notifier/config/config.toml
+++ b/cmd/notifier/config/config.toml
@@ -2,16 +2,6 @@
     # The port on which the Hub listens for subscriptions
     Port = "5000"
 
-    # The type of the hub. Options: | common | custom:<your_hub_id> |
-    # Used for custom implementations for subscriptions/events filtering
-    # Defaults to: common
-    HubType = "common"
-
-    # The dispathing type. Options: | websocket | graphql | dispatch:* |
-    # The driver can receive subscribe events and broadcast on one or more channels
-    # Defaults to: websocket.
-    DispatchType = "websocket"
-
     # Username is the username needed to authorize an observer to push data
     Username = ""
 
@@ -21,9 +11,9 @@
     # CheckDuplicates signals if the events received from observers have been already pushed to clients
     # Requires a redis instance/cluster and should be used when multiple observers push from the same shard
     # Defaults to: false
-    CheckDuplicates = false
+    CheckDuplicates = true
 
-[PubSub]
+[Redis]
     # The url used to connect to a pubsub server
     # Note: not required for running in the notifier mode
     Url = "redis://localhost:6379/0"
@@ -37,6 +27,12 @@
 
     # The sentinel url for failover client
     SentinelUrl = "sentinel:26379"
+
+    # The redis connection type. Options: | instance | sentinel |
+    # instance - it will try to connect to a single redis instance
+    # sentinel - it will try to connect to redis setup with master, slave and sentinel instances
+    # Defaults to: instance
+    ConnectionType = "sentinel"
 
 [RabbitMQ]
     # The url used to connect to a rabbitMQ server
