--- a/.github/workflows/pr-build.yaml
+++ b/.github/workflows/pr-build.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ main, development, feat/* ]
 
 jobs:
-  test:
+  build:
     name: Build
     runs-on: ubuntu-latest
     steps:
