--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,9 @@ services:
       - notifier-net
 
   rabbitmq:
-    image: "rabbitmq:3"
+    image: "rabbitmq:3-management"
     ports:
         - "5672:5672"
+        - "15672:15672"
     networks:
       - notifier-net
