handle txs in rabbitmq flow: - add txs endpoint in api events group - separate channels for broadcasting block txs events

--- a/cmd/notifier/config/config.toml
+++ b/cmd/notifier/config/config.toml
@@ -48,3 +48,7 @@
     # The exchange name which holds finalized block events
     # Expected type: fanout
     FinalizedEventsExchange = "finalized_events"
+
+    # The exchange name which holds block txs events
+    # Expected type: fanout
+    TxsEventsExchange = "txs_events"
