separate marshaller for internal marshalling + renamings

--- a/cmd/notifier/config/config.toml
+++ b/cmd/notifier/config/config.toml
@@ -1,6 +1,10 @@
 [General]
-    # Marshaller configuration
-    [General.Marshaller]
+    # ExternalMarshaller is used for handling incoming/outcoming api requests 
+    [General.ExternalMarshaller]
+        Type = "json"
+    # InternalMarshaller is used for handling internal structs
+    # This has to be mapped with the internal marshalling used for notifier outport driver
+    [General.InternalMarshaller]
         Type = "json"
 
     # Address pubkey converter config options
