--- a/cmd/notifier/config/config.toml
+++ b/cmd/notifier/config/config.toml
@@ -13,6 +13,26 @@
         Prefix = "erd"
         Length = 32
 
+[WebSocketConnector]
+    # URL for the WebSocket client/server connection
+    # This value represents the IP address and port number that the WebSocket client or server will use to establish a connection.
+    url = "localhost:22111"
+
+    # This flag describes the mode to start the WebSocket connector. Can be "client" or "server"
+    mode = "server"
+
+    # Possible values: json, gogo protobuf. Should be compatible with mx-chain-node outport driver config
+    data-marshaller-type = "json"
+
+    # Retry duration (receive/send ack signal) in seconds
+    retry-duration-in-seconds = 5
+
+    # Signals if in case of data payload processing error, we should send the ack signal or not
+    blocking-ack-on-error = false
+
+    # After a message will be sent it will wait for an ack message if this flag is enabled
+    with-acknowledge = true
+
 [ConnectorApi]
     # The port on which the Hub listens for subscriptions
     Port = "5000"
