--- a/cmd/notifier/config/config.toml
+++ b/cmd/notifier/config/config.toml
@@ -46,7 +46,7 @@
 [ConnectorApi]
     # Enabled will determine if http connector will be enabled or not.
     # It will determine if http connector endpoints will be created.
-    # If set to false, the web server will still be created 
+    # If set to false, the web server will still be created for other endpoints (for metrics, or for WS is needed)
     Enabled = true
 
     # The address on which the events notifier listens for subscriptions
